--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -43,6 +43,7 @@
             <a title="Import saved links from another device" onclick="importLinks();"><i class="fa-solid fa-file-import"></i> Import</a>
             <a title="Export links as a save code" id="sharebuttonoptions" onclick="exportLinks();"><i class="fa-solid fa-download"></i> Export</a>
             <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
+		<input type="file" id="hiddenFileInput" accept=".countdown" style="display: none;">
         </div>
         <div id="linksContainer" class="links-container">
         </div>
@@ -73,22 +74,42 @@ function removeLink(index, event) {
 }
 
 function exportLinks() {
-    const saveCode = btoa(JSON.stringify(links));
-    alert('Save Code: ' + saveCode);
+	const data = JSON.stringify(links);
+	const blob = new Blob([data], { type: "application/json" });
+	const url = URL.createObjectURL(blob);
+
+	// Download the file
+	const link = document.createElement("a");
+	link.href = url;
+	link.download = "dashboardsave.countdown";
+	link.click();
+	URL.revokeObjectURL(url);
 }
 
-function importLinks() {
-    const saveCode = prompt('Enter save code:');
-    if (saveCode) {
-        try {
-            links = JSON.parse(atob(saveCode));
+document.getElementById('hiddenFileInput').addEventListener('change', (event) => {
+    const file = event.target.files[0];
+    if (file && file.name.endsWith('.countdown')) {
+        const reader = new FileReader();
+        reader.onload = (e) => {
+            const data = JSON.parse(e.target.result);
+                    try {
+            links = JSON.parse(data);
             saveLinks();
             renderLinks();
             alert('Links imported successfully');
         } catch (error) {
             alert('Invalid save code');
         }
+        };
+        reader.readAsText(file);
+    } else {
+        alert("Please upload a valid .countdown file.");
     }
+});
+	    
+function importLinks() {
+	const hiddenFileInput = document.getElementById('hiddenFileInput');
+	hiddenFileInput.click(); // Trigger the hidden file input
 }
 
 function renderLinks() {
