--- a/mcacountdown/betatimer_light.html
+++ b/mcacountdown/betatimer_light.html
@@ -784,6 +784,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         opacity:0;
         transition:opacity 0.3s ease-in-out;
         font-family: Fredoka One;
+        display:none !important;
     }
 
 
