--- a/mcacountdown/betatimer_light.html
+++ b/mcacountdown/betatimer_light.html
@@ -164,12 +164,12 @@
                 <a class="sidebaranchor" href="#generaloptions"><i style="background-color:#8426FF" class="fa-regular fa-clock"></i> General</a>
                 <Br>
                 <a class="sidebaranchor" href="#customizationoptions"><i style="background-color:#00b2ff" class="fa-solid fa-palette"></i> Customization</a>
-                <br>
-                <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background-color:#00FF5E;" class="fa-solid fa-flag-checkered"></i> Ending</a>
+                <br style="display:none">
+                <a style="display:none" id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background-color:#00FF5E;" class="fa-solid fa-flag-checkered"></i> Ending</a>
                 <br>
                 <a class="sidebaranchor" href="#scheduleoptions"><i style="background-color:#FF9900" class="fa-solid fa-calendar"></i> Schedule</a>
                 <br>
-                <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background-color:#8426FF" class="fa-solid fa-spinner"></i> Progress</a>
+                <a style="display:none" id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background-color:#8426FF" class="fa-solid fa-spinner"></i> Progress</a>
             </div>
             <div id="settingssidebarpanepersonal">
                 <h3>Personal</h3>
