--- a/mcacountdown/betatimer_light.html
+++ b/mcacountdown/betatimer_light.html
@@ -1459,7 +1459,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
             #settingsmainpane{
                 float:right;
-                width:80vw;
+                width:100vw;
                 background: rgba(20, 20, 20, 0.83);
                 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
                 backdrop-filter: blur(75px);
@@ -1467,6 +1467,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 position:absolute;
                 top:0px;
                 right:0px;
+                z-index:-1;
             }
             #settingssidebar{
                 height:100vh;
