--- a/mcacountdown/betatimer_light.html
+++ b/mcacountdown/betatimer_light.html
@@ -1459,7 +1459,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
             #settingsmainpane{
                 float:right;
-                width:100vw;
+                width:80vw;
                 background: rgba(20, 20, 20, 0.83);
                 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
                 backdrop-filter: blur(75px);
@@ -1486,6 +1486,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 background-color:black;
                 z-index:10000;
 		white-space:nowrap;
+        display:none;
             }
             #settingssidebar::-webkit-scrollbar {
                 width:0;
