--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -391,10 +391,15 @@
                 <br>
 		</div>
                 <h1 id="scheduleoptions">Countdown Schedule <span class="betatag">BETA</span></h1>
+		<h2 style="font-family: 'Dosis';">Convert to Countdown Schedule</h2>
 		<div style="text-align:left;>
-		    <p style="font-family: 'Dosis', sans-serif; color:white;"><i style="color:#ff9900" class="fa-solid fa-calendar"></i> Keep track of your recurring events</p>
-		    <p style="font-family: 'Dosis', sans-serif; color:white;"><i style="color:#8426ff" class="fa-solid fa-briefcase"></i> Set different schedules for different days</p>
-		    <p style="font-family: 'Dosis', sans-serif; color:white;"><i style="color:#3ab6ff" class="fa-solid fa-rotate"></i> Note that once you convert this Countdown to be a Schedule, it cannot be changed back</p>
+		    <p style="font-family: 'Dosis', sans-serif; color:white;">
+			<i style="color:#ff9900" class="fa-solid fa-calendar"></i> Keep track of your recurring events
+			<br>
+		    <i style="color:#8426ff" class="fa-solid fa-briefcase"></i> Set different schedules for different days
+			<br>
+		    <i style="color:#3ab6ff" class="fa-solid fa-rotate"></i> Note that once you convert this Countdown to be a Schedule, it cannot be changed back
+		</p>
 		</div>
 		<a>Supercharge Your Schedule</a>
 
