--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -392,7 +392,7 @@
 		</div>
                 <h1 id="scheduleoptions">Countdown Schedule <span class="betatag">BETA</span></h1>
 		<h2 style="font-family: 'Dosis';">Convert to Countdown Schedule</h2>
-		<div style="text-align:left; width:auto; display: inline-block;">
+		<div style="text-align:left; width:auto;">
 		    <p style="font-family: 'Dosis', sans-serif; color:white;">
 			<i style="color:#ff9900" class="fa-solid fa-calendar"></i> Keep track of your recurring events
 			<br>
