--- a/worshipnight.html
+++ b/worshipnight.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Worship Night Lyrics</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="songsection">
     <h1>Awesome God</h1>
     <p><h3>Verse 1</h3>When He rolls up His sleeves
         <br>
@@ -72,9 +76,11 @@
         Our God is an awesome God
         <br>
     </p>
+    </div>
     <br>
     <br>
     <br>
+    <div class="songsection">
     <h1>Holy Water</h1>
     <p>
         <h3>Verse 1</h3>
@@ -132,9 +138,11 @@
         <br>
         It's the only thing that ever really makes me wanna change
     </p>
+    </div>
     <br>
     <br>
     <br>
+    <div class="songsection">
     <h1>Good Grace</h1>
     <p><h3>Verse 1</h3>
         People
@@ -221,6 +229,11 @@
         <br>
         His Name is Jesus
     </p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="songsection">
     <h1>Abide</h1>
     <p>
         <h3>Verse 1</h3>
@@ -281,5 +294,178 @@
         I depend on You, I depend on You
         <br>
     </p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="songsection">
+    <h1>Make Room</h1>
+    <p>
+        <h3>Verse 1</h3>
+        Here is where I lay it down<br>
+        Every burden, every crown<br>
+        <br>
+        This is my surrender<br>
+        This is my surrender<br>
+        <br>
+        Here is where I lay it down<br>
+        Every lie and every doubt<br>
+        <br>
+        This is my surrender<br>
+        <br>
+        <h3>Chorus</h3>
+        and I will make room for You<br>
+        To do whatever You want to<br>
+        To do whatever You want to<br>
+        <br>
+        I will make room for You<br>
+        To do whatever You want to<br>
+        To do whatever You want to<br>
+<h3>Bridge</h3>
+Shake up the ground of all my tradition<br>
+Break down the walls of all my religion<br>
+<br>
+Your way is better<br>
+Your way is better<br>
+<h3>Verse 2</h3>
+Here is where I lay it down<br>
+You are all I'm chasing now<br>
+<br>
+This is my surrender<br>
+This is my surrender<br>
+<br>
+Here is where I lay it down<br>
+You are all I'm chasing now<br>
+<br>
+This is my surrender<br>
+This is my surrender<br>
+    </p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="songsection">
+    <h1>Is He Worthy?</h1>
+    <p>
+        <h3>Verse 1</h3>
+        Do you feel the world is broken?<br>
+        (We do)<br>
+        Do you feel the shadows deepen?<br>
+        (We do)<br>
+        <br>
+        But do you know that all the dark won't<br>
+        Stop the light from getting through?<br>
+        (We do)<br>
+        Do you wish that you could see it all made new?<br>
+        (We do)
+<br>
+<br>
+<h3>Verse 2</h3>
+Is all creation groaning? (It is)<br>
+Is a new creation coming? (It is)<br>
+<br>
+Is the glory of the Lord to be the light within our midst? (It is)<br>
+Is it good that we remind ourselves of this? (It is)<br>
+<br>
+<h3>Chorus</h3>
+Is anyone worthy?<br>
+Is anyone whole?<br>
+Is anyone able to break the seal and open the scroll?<br>
+The Lion of Judah who conquered the grave<br>
+He was David's root and the Lamb who died to ransom the slave<br>
+<br>
+<br>
+Is He worthy? Is He worthy?<br>
+Of all blessing and honor and glory<br>
+Is He worthy of this?<br>
+He is<br>
+<br>
+<br>
+<h3>Verse 3</h3>
+Does the Father truly love us?<br>
+(He does)<br>
+Does the Spirit move among us?<br>
+(He does)<br>
+<br>
+<Br>
+And does Jesus, our Messiah hold forever those He loves?<br>
+(He does)<br>
+Does our God intend to dwell again with us?<br>
+(He does)<br>
+<br>
+<br>
+<h3>Bridge</h3>
+From every people and tribe<br>
+Every nation and tongue<br>
+He has made us a kingdom and priests to God<br>
+To reign with the Son<br>
+    </p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="songsection">
+    <h1>Promises</h1>
+    <p>
+        <h3>Verse 1</h3>
+God of Abraham<br>
+You're the God of covenant<br>
+And faithful promises<br>
+Time and time again<br>
+You have proven<br>
+You'll do just what You said<br>
+<h3>Prechorus</h3>
+Though the storms may come<br>
+And the winds may blow<br>
+I'll remain steadfast<br>
+And let my heart learn<br>
+When You speak a word<br>
+It will come to pass<br>
+<h3>Chorus</h3>
+Great is Your faithfulness to me<br>
+Great is Your faithfulness to me<br>
+From the rising sun to the setting same<br>
+I will praise Your name<br>
+Great is Your faithfulness to me<br>
+<h3>Verse 2</h3>
+God from age to age<br>
+Though the earth may pass away<br>
+Your word remains the same<br>
+Your history can prove<br>
+There's nothing You can't do<br>
+You're faithful and true<br>
+<h3>Bridge</h3>
+I put my faith in Jesus<br>
+My anchor to the ground<br>
+My hope and firm foundation<br>
+He'll never let me down<br>
+
+    </p>
+    </div>
 </body>
+<style>
+    *{
+        font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color:white;
+    }
+    body{
+        background-color: #141414;
+        margin:0;
+        padding:0px;
+    }
+    .songsection{
+        margin-left:40px;
+        padding-bottom:100px;
+        border-bottom:1px solid #42f5d7;
+    }
+    h3{
+        color:#b4fff0;
+    }
+    h1{
+        color:#42f5d7;
+        font-weight: 500;
+    }
+</style>
 </html>
