--- a/worshipnight.html
+++ b/worshipnight.html
@@ -197,6 +197,13 @@
             <br>For eternal life to be raised with Christ
             <br>I depend on You, I depend on You
         </p>
+        <p data-aos="fade-up">
+            <h3>Tag (He Will Hold Me Fast)</h3>
+            He will hold me fast<br>
+            He will hold me fast<br>
+            For my Saviour loves me so<br>
+            He will hold me fast<br>
+        </p>
     </div>
     <div class="songsection">
         <h1>Make Room</h1>
@@ -240,6 +247,24 @@
             <br>You are all I'm chasing now
             <br>This is my surrender
             <br>This is my surrender
+        </p>
+        <p data-aos="fade-up">
+            <h3>Tag (All Of a Sudden)</h3>
+            I breathe you in<br>
+            I breathe you in<br>
+            Come fill me Holy Spirit<br>
+            I breathe you in<br>
+            I breathe you in<br>
+            When you come all of a sudden<br>
+            I am strong again<br>
+            <br>
+            Breathe on me oh breath of God<br>
+            Flood me with Your living water<br>
+            Rush through me now 'til my soul overflows
+            <br>
+            <br>
+            This is my surrender<br>
+            This is my surrender
         </p>
     </div>
     <div class="songsection">
@@ -355,25 +380,42 @@
         font-family: "Poppins", sans-serif;
         font-weight: 400;
         font-style: normal;
-        color:white;
+        color:black;
+        overflow-x:hidden !important;
     }
     body{
-        background-color: #141414;
+        background-color: #ffffff;
         margin:0;
         padding:0px;
+        overflow-x:hidden !important;
     }
     .songsection{
         margin-left:40px;
         padding-bottom:100px;
         border-bottom:1px solid #42f5d7;
-        background-image: linear-gradient(to bottom right, #42f5d700, #42f5d700,#42f5d700, #42f5d712) !important;
+        background-image: linear-gradient(to bottom right, #42f5d700, #42f5d700,#42f5d700, #42f5d768) !important;
     }
     h3{
-        color:#b4fff0;
+        color:#064b3d;
     }
     h1{
-        color:#42f5d7;
+        color:#009f84;
         font-weight: 500;
+    }
+    .songsection h1 {
+        position: sticky;
+        top: 0;
+        margin-left:-40px;
+        padding-left:40px !important;
+        z-index: 10;
+        padding: 10px 0;
+        /* From https://css.glass */
+        overflow-x:hidden !important;
+
+background: rgba(255, 255, 255, 0.57);
+width:100vw;
+backdrop-filter: blur(8px);
+-webkit-backdrop-filter: blur(8px);
     }
 </style>
 <script>
