--- a/worshipnight.html
+++ b/worshipnight.html
@@ -381,13 +381,13 @@
         font-weight: 400;
         font-style: normal;
         color:black;
-        overflow-x:hidden !important;
     }
     body{
         background-color: #ffffff;
         margin:0;
         padding:0px;
         overflow-x:hidden !important;
+        width:100vw;
     }
     .songsection{
         margin-left:40px;
@@ -413,7 +413,7 @@
         overflow-x:hidden !important;
 
 background: rgba(255, 255, 255, 0.57);
-width:100vw;
+width:calc(100vw -40px);
 backdrop-filter: blur(8px);
 -webkit-backdrop-filter: blur(8px);
     }
