--- a/worshipnight.html
+++ b/worshipnight.html
@@ -399,20 +399,21 @@
         color:#064b3d;
     }
     h1{
-        color:#009f84;
+        color:black;
         font-weight: 500;
     }
     .songsection h1 {
         position: sticky;
         top: 0;
+        margin-top:0px;
         margin-left:-40px;
         padding-left:40px !important;
         z-index: 10;
         padding: 10px 0;
         /* From https://css.glass */
         overflow-x:hidden !important;
+background: rgba(255, 255, 255, 0.57) !important;
 
-background: rgba(255, 255, 255, 0.57);
 width:calc(100vw -40px);
 backdrop-filter: blur(8px);
 -webkit-backdrop-filter: blur(8px);
