--- a/worshipnight.html
+++ b/worshipnight.html
@@ -336,6 +336,10 @@
     <div class="songsection">
         <h1>Made a Way</h1>
         <p data-aos="fade-up">
+            <h3>Tag</h3>
+            Yeshua<br>
+        </p>
+        <p data-aos="fade-up">
             <h3>Verse</h3>
             You made a way<br>
             When our backs were against the wall<br>
