--- a/worshipnight.html
+++ b/worshipnight.html
@@ -329,6 +329,7 @@
             <h3>Ending</h3>
             Is He worthy
             <br>Is He worthy
+            <Br>
             <br>He is
             <br>He is
         </p>
@@ -433,6 +434,7 @@
         width:100vw;
     }
     .songsection{
+        min-height: 100vh;
         margin-left:40px;
         padding-bottom:100px;
         border-bottom:1px solid #42f5d7;
