--- a/worshipnight.html
+++ b/worshipnight.html
@@ -366,9 +366,9 @@
             I don't know how<br>
             But You did it made a way
             <br><br>
-            I don't know why but im greatful<br>
+            I don't know why but I'm greatful<br>
             You made a way<br>
-            I don't know why but im greatful<br>
+            I don't know why but I'm greatful<br>
             You made a way<br>
         </p>
     </div>
