--- a/worshipnight.html
+++ b/worshipnight.html
@@ -7,8 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <meta name="theme-color" content="#42f5d7" />
     <meta property="og:image" content="https://michaeldors.com/Images/homecover.jpg"/>
@@ -21,7 +19,7 @@
 <body>
     <div class="songsection">
         <h1>Awesome God</h1>
-        <p data-aos="fade-up"><h3>Verse 1</h3>When He rolls up His sleeves
+        <p ><h3>Verse 1</h3>When He rolls up His sleeves
             <br>He ain't just putting on the ritz
             <br>(Our God is an awesome God)
             <br>There's thunder in His footsteps
@@ -36,14 +34,14 @@
             <br>And so you better be believing that
             <br>Our God is an awesome God
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus</h3>
             Our God is an awesome God
             <br>He reigns from heaven above
             <br>With wisdom, power, and love
             <br>Our God is an awesome God
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 2</h3>
             And when the sky was starless
             <br>In the void of the night
@@ -62,7 +60,7 @@
     </div>
     <div class="songsection">
         <h1>Holy Water</h1>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 1</h3>
             God, I'm on my knees again
             <br>God, I'm begging please again
@@ -74,14 +72,14 @@
             <br>I need you
             <br>Oh, I need you
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus</h3>
             Your forgiveness
             <br>Is like sweet, sweet honey on my lips
             <br>Like the sound of a symphony to my ears
             <br>Like Holy water on my skin
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 2</h3>
             Dead man walking, slave to sin
             <br>I wanna know about being born again
@@ -93,7 +91,7 @@
             <br>I need you
             <br>Oh, God I need you
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Bridge</h3>
             I don't wanna abuse your grace
             <br>God, I need it every day
@@ -102,7 +100,7 @@
     </div>
     <div class="songsection">
         <h1>Good Grace</h1>
-        <p data-aos="fade-up"><h3>Verse 1</h3>
+        <p ><h3>Verse 1</h3>
             People
             <br>Come together
             <br>Strange as neighbors
@@ -112,7 +110,7 @@
             <br>Of every nation
             <br>Of kingdom come
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus</h3>
             Don't let your heart be troubled
             <br>Hold your head up high
@@ -124,7 +122,7 @@
             <br>Be strong
             <br>Remember where our help comes from
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 2</h3>
             Jesus
             <br>Our redemption
@@ -136,7 +134,7 @@
             <br>Friend forever
             <br>His kingdom come
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Bridge</h3>
             Swing wide
             <br>All you heavens
@@ -158,7 +156,7 @@
     </div>
     <div class="songsection">
         <h1>Abide</h1>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 1</h3>
             For my waking breath for my daily bread
             <br>I depend on You, I depend on You
@@ -166,21 +164,21 @@
             <br>For the sun to rise for my sleep at night
             <br>I depend on You, I depend on You
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus 1</h3>
             You're the way the truth and the life
             <br>You're the well that never runs dry
             <br>I'm the branch and You are the vine
             <br>Draw me close and teach me to abide
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 2</h3>
             Where the Spirit leads as I'm following
             <br>I depend on You, I depend on You
             <br>For the victories still in front of me
             <br>I depend on You, I depend on You
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus 2</h3>
             You're the way the truth and the life
             <br>You're the well that never runs dry
@@ -192,14 +190,14 @@
             <br>I am Yours forever Your mine
             <br>Draw me close and teach me to abide
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 3</h3>
             When I pass through death as I enter rest
             <br>I depend on You, I depend on You
             <br>For eternal life to be raised with Christ
             <br>I depend on You, I depend on You
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Tag (He Will Hold Me Fast)</h3>
             He will hold me fast<br>
             He will hold me fast<br>
@@ -209,7 +207,7 @@
     </div>
     <div class="songsection">
         <h1>Make Room</h1>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 1</h3>
             Here is where I lay it down
             <br>Every burden, every crown
@@ -220,7 +218,7 @@
             <br>Every lie and every doubt
             <br>This is my surrender
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus</h3>
             and I will make room for You
             <br>To do whatever You want to
@@ -230,7 +228,7 @@
             <br>To do whatever You want to
             <br>To do whatever You want to
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Bridge</h3>
             Shake up the ground of all my tradition
             <br>Break down the walls of all my religion
@@ -238,7 +236,7 @@
             <br>Your way is better
             <br>Your way is better
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 2</h3>
             Here is where I lay it down
             <br>You are all I'm chasing now
@@ -250,7 +248,7 @@
             <br>This is my surrender
             <br>This is my surrender
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Tag (All Of a Sudden)</h3>
             I breathe you in<br>
             I breathe you in<br>
@@ -271,7 +269,7 @@
     </div>
     <div class="songsection">
         <h1>Is He Worthy?</h1>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 1</h3>
             Do you feel the world is broken?
             <br>(We do)
@@ -284,7 +282,7 @@
             <br>Do you wish that you could see it all made new?
             <br>(We do)
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 2</h3>
             Is all creation groaning? (It is)
             <br>Is a new creation coming? (It is)
@@ -292,7 +290,7 @@
             <br>Is the glory of the Lord to be the light within our midst? (It is)
             <br>Is it good that we remind ourselves of this? (It is)
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus</h3>
             Is anyone worthy?
             <br>Is anyone whole?
@@ -307,7 +305,7 @@
             <br>Is He worthy of this?
             <br>He is
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 3</h3>
             Does the Father truly love us?
             <br>(He does)
@@ -319,7 +317,7 @@
             <br>Does our God intend to dwell again with us?
             <br>(He does)
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Bridge</h3>
             From every people and tribe
             <br>Every nation and tongue
@@ -327,7 +325,7 @@
             <br>He has made us a kingdom and priests to God
             <br>To reign with the Son
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Ending</h3>
             Is He worthy
             <br>Is He worthy
@@ -338,11 +336,11 @@
     </div>
     <div class="songsection">
         <h1>Made a Way</h1>
-        <p data-aos="fade-up">
+        <p >
             <h3>Tag</h3>
             Yeshua<br>
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse</h3>
             You made a way<br>
             When our backs were against the wall<br>
@@ -351,7 +349,7 @@
             And we're standing here<br>
             Only because You made a way<br>
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus</h3>
             You move mountains<br>
             You cause walls to fall<br>
@@ -360,7 +358,7 @@
             And we're standing here<br>
             Only because You made a way<br>
         </p>
-        <p data-aos="fade-up">
+        <p >
             I don't know how<br>
             But You did it made a way<br>
             I don't know how<br>
@@ -374,7 +372,7 @@
     </div>
     <div class="songsection">
         <h1>Promises</h1>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 1</h3>
             God of Abraham
             <br>You're the God of covenant
@@ -384,7 +382,7 @@
             <br>You have proven
             <br>You'll do just what You said
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Prechorus</h3>
             Though the storms may come
             <br>And the winds may blow
@@ -394,7 +392,7 @@
             <br>When You speak a word
             <br>It will come to pass
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Chorus</h3>
             Great is Your faithfulness to me
             <br>Great is Your faithfulness to me
@@ -402,7 +400,7 @@
             <br>I will praise Your name
             <br>Great is Your faithfulness to me
         </p>
-        <p data-aos="fade-up">
+        <p >
             <h3>Verse 2</h3>
             God from age to age
             <br>Though the earth may pass away
@@ -412,7 +410,7 @@
             <br>There's nothing You can't do
             <br>You're faithful and true
         </p>
-        <p data-aos="fade-up">
+        <p  >
             <h3>Bridge</h3>
             I put my faith in Jesus
             <br>My anchor to the ground
@@ -466,7 +464,4 @@ backdrop-filter: blur(8px);
 -webkit-backdrop-filter: blur(8px);
     }
 </style>
-<script>
-    AOS.init();
-</script>
 </html>
