--- a/worshipnight.html
+++ b/worshipnight.html
@@ -410,12 +410,28 @@
             <br>There's nothing You can't do
             <br>You're faithful and true
         </p>
-        <p  >
+        <p>
             <h3>Bridge</h3>
             I put my faith in Jesus
             <br>My anchor to the ground
             <br>My hope and firm foundation
             <br>He'll never let me down
+        </p>
+        <p>
+            <h3>Tag (Great Is Thy Faithfulness)</h3>
+            Great is Thy faithfulness
+            <br>O God my father
+            <br>There is no shadow of turning with Thee
+            <br>
+            <br>Thou changest not
+            <br>Thy compassions they fail not
+            <br>As Thou hast been Thou forever wilt be
+            <br>
+            <br>Great is Thy faithfulness
+            <br>Great is Thy faithfulness
+            <br>morning by morning new mercies I see
+            <br>All I have needed Thy hand hath provided
+            <br>Great is Thy faithfulness to me
         </p>
     </div>
 </body>
