--- a/worshipnight.html
+++ b/worshipnight.html
@@ -358,16 +358,12 @@
             And we're standing here<br>
             Only because You made a way<br>
         </p>
-        <p >
+        <p>
+            <h3>Vamp</h3>
             I don't know how<br>
             But You did it made a way<br>
             I don't know how<br>
             But You did it made a way
-            <br><br>
-            I don't know why but I'm greatful<br>
-            You made a way<br>
-            I don't know why but I'm greatful<br>
-            You made a way<br>
         </p>
     </div>
     <div class="songsection">
