--- a/worshipnight.html
+++ b/worshipnight.html
@@ -284,8 +284,10 @@
         </p>
         <p >
             <h3>Verse 2</h3>
-            Is all creation groaning? (It is)
-            <br>Is a new creation coming? (It is)
+            Is all creation groaning?
+            <br>(It is)
+            <br>Is a new creation coming?
+            <br>(It is)
             <br>
             <br>Is the glory of the Lord to be the light within our midst? (It is)
             <br>Is it good that we remind ourselves of this? (It is)
