--- a/worshipnight.html
+++ b/worshipnight.html
@@ -289,8 +289,10 @@
             <br>Is a new creation coming?
             <br>(It is)
             <br>
-            <br>Is the glory of the Lord to be the light within our midst? (It is)
-            <br>Is it good that we remind ourselves of this? (It is)
+            <br>Is the glory of the Lord to be the light within our midst?
+            <br>(It is)
+            <br>Is it good that we remind ourselves of this?
+            <br>(It is)
         </p>
         <p >
             <h3>Chorus</h3>
