--- a/worshipnight.html
+++ b/worshipnight.html
@@ -451,7 +451,8 @@
     }
     .songsection{
         min-height: 100vh;
-        margin-left:40px;
+        margin-left:20px;
+        padding-right:20px;
         padding-bottom:100px;
         border-bottom:1px solid #42f5d7;
         background-image: linear-gradient(to bottom right, #42f5d700, #42f5d700,#42f5d700, #42f5d768) !important;
@@ -467,15 +468,15 @@
         position: sticky;
         top: 0;
         margin-top:0px;
-        margin-left:-40px;
-        padding-left:40px !important;
+        margin-left:-20px;
+        padding-left:20px !important;
         z-index: 10;
         padding: 10px 0;
         /* From https://css.glass */
         overflow-x:hidden !important;
 background: rgba(255, 255, 255, 0.57) !important;
 
-width:calc(100vw -40px);
+width:calc(100vw -20px);
 backdrop-filter: blur(8px);
 -webkit-backdrop-filter: blur(8px);
     }
