--- a/worshipnight.html
+++ b/worshipnight.html
@@ -470,6 +470,7 @@
         margin-top:0px;
         margin-left:-20px;
         padding-left:20px !important;
+        padding-right:0px !important;
         z-index: 10;
         padding: 10px 0;
         /* From https://css.glass */
