--- a/worshipnight.html
+++ b/worshipnight.html
@@ -477,7 +477,7 @@
         overflow-x:hidden !important;
 background: rgba(255, 255, 255, 0.57) !important;
 
-width:calc(100vw -20px);
+width:calc(100vw);
 backdrop-filter: blur(8px);
 -webkit-backdrop-filter: blur(8px);
     }
