--- a/mcaworship/index.html
+++ b/mcaworship/index.html
@@ -1,1 +1,28 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MCA Christmas Concert</title>
+</head>
+<body>
+    <h1>MCA Christmas Concert</h1>
+</body>
+<style>
+    body{
+        background: #E9D7C9;
+    }
+    @font-face {
+        font-family: Rafaella;
+        src: url(Rafaella.ttf);
+    }
+    h1{
+        color:#A02E32;
+        font-family:Rafaella;
+    }
+    p{
+        color:black;
+    }
+</style>
+</html>
