--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2117,9 +2117,9 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     }
 
     @media only screen and (max-width: 1290px) and (orientation:portrait) {
-       /* body {
+       body {
             zoom: 75%;
-        }*/
+        }
 
         #settingsmainpane{
                 width:100vw;
