--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2118,10 +2118,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
     @media only screen and (max-width: 1290px) and (orientation:portrait) {
        body {
-    transform: scale(0.75);
-    transform-origin: top left;
-    width: 133.33%; /* 100% / 0.75 */
-    height: 133.33%; /* 100% / 0.75 */
+    zoom:75%;
 }
 
         #settingsmainpane{
